[workspace]

members = [
    "saveweb",
    "webui_procs",
    "webui",
    "webuisave",
    "webapp",
    "webapp_post_build",
]
resolver = "3"

[profile.dev]
opt-level = "s"
lto = true
incremental = true

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true

[profile.dev.build-override]
opt-level = "s"
codegen-units = 16

[profile.release.build-override]
opt-level = "s"
codegen-units = 16
