[package]
name = "webapp"
version = "0.3.18"#sync
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webui = { path = "../webui" }
yew = "0.19"
#js-sys = "0.3"
#wasm-bindgen = "0.2"
#wasm-bindgen-futures = "0.4"
#wasm-logger = "0.2"

[profile.dev]
opt-level = "s"
lto = true
incremental = true

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true

[profile.dev.build-override]
opt-level = "s"
codegen-units = 16

[profile.release.build-override]
opt-level = "s"
codegen-units = 16
