[package]
name = "webapp"
version = "0.4.6"#sync
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webui = { path = "../webui" }
yew = {version = "0.20", features = ["csr"]}
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = "s"
lto = true
incremental = true

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true

[profile.dev.build-override]
opt-level = "s"
codegen-units = 16

[profile.release.build-override]
opt-level = "s"
codegen-units = 16
