[package]
name = "webui"
version = "0.7.31" #syncwebui
crate-type = ["dylib", "rlib"]
edition = "2021"
description = "`early development` Website UI framework and component library for quickly building websites with native support for Material UI standardization."
keywords = ["webassembly", "ui"]
categories = ["wasm", "web-programming"]
license = "MIT"
authors = ["Erik Gasssler"]
documentation = "https://docs.rs/webui"
repository = "https://github.com/StoicDreams/RustWebUI"
homepage = "https://webui.stoicdreams.com"

[features]
all = ["myfi", "nextpagebutton", "pages"]
default = ["pages"]
myfi = []
nextpagebutton = []
pages = []
stoic = []
tauri = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webui_procs = "0.7.11" # { path = "../webui_procs" }
web-sys = "0.3"
yew = "0.20"
yew-agent = "0.2"
yew-hooks = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.3"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
regex = "1"
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
chrono = "0.4"
lazy_static = "1.4"
num-format = "0.4"
markdown = "1.0.0-alpha.16"
