[package]
name = "webui"
version = "0.10.5" #syncwebui
crate-type = ["dylib", "rlib"]
edition = "2021"
description = "`early development` Website UI framework and component library for quickly building websites with native support for Material UI standardization."
keywords = ["webassembly", "ui"]
categories = ["wasm", "web-programming"]
license = "MIT"
authors = ["Erik Gasssler"]
documentation = "https://docs.rs/webui"
repository = "https://github.com/StoicDreams/WebUI"
homepage = "https://webui.stoicdreams.com"

[features]
all = []
default = []
tauri = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webui_procs = "0.10" # { path = "../webui_procs" }
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.3"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
regex = "1"
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
chrono = "0.4"
lazy_static = "1.4"
num-format = "0.4"
